add centos support!

--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -24,6 +24,19 @@ xen_gate=
 xen_name=8.8.8.8
 xen_hostname=xenserver130
 
+[centos]    
+nfs_ip=172.16.0.1
+nfs_dir=/opt/centos6.5
+centos_path=centos6.5
+nfs_ans=C:\\python-workshop\\pxeBuilder\\final
+host_pass=security421
+host_nic=eth0
+host_ipaddr=172.16.1.130
+host_mask=255.255.0.0
+host_gate=
+host_ns=8.8.8.8
+hostname=centos130
+
 [global]    
 conf_folder=conf
 pxelinux=C:\\python-workshop\\pxeBuilder\\final
