--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -1,43 +1,44 @@
-[xcp]    
-nfs_ip=172.16.0.1
-nfs_dir=/opt/xcp
-xen_path=xcp
-nfs_ans=C:\\python-workshop\\pxeBuilder\\final
-xen_pass=yunshan3302
-xen_nic=eth0
-xen_ipaddr=172.16.1.130
-xen_mask=255.255.0.0
-xen_gate=
-xen_name=8.8.8.8
-xen_hostname=xcp130
-
-[xenserver]    
-nfs_ip=172.16.0.1
-nfs_dir=/opt/xenserver
-xen_path=xenserver
-nfs_ans=C:\\python-workshop\\pxeBuilder\\final
-xen_pass=yunshan3302
-xen_nic=eth0
-xen_ipaddr=172.16.1.130
-xen_mask=255.255.0.0
-xen_gate=
-xen_name=8.8.8.8
-xen_hostname=xenserver130
-
-[centos]    
-nfs_ip=172.16.0.1
-nfs_dir=/opt/centos6.5
-centos_path=centos6.5
-nfs_ans=C:\\python-workshop\\pxeBuilder\\final
-host_pass=security421
-host_nic=eth0
-host_ipaddr=172.16.1.130
-host_mask=255.255.0.0
-host_gate=
-host_ns=8.8.8.8
-hostname=centos130
-
 [global]    
 conf_folder=conf
 pxelinux=C:\\python-workshop\\pxeBuilder\\final
+#/opt/tftpboot/isolinux/pxelinux.cfg
+nfs_ans=C:\\python-workshop\\pxeBuilder\\final
+#/opt/kick
 temp_folder=templates
+nfs_ip=172.16.0.1
+
+[xcp]    
+nfs_dir=/opt/xcp
+xen_path=xcp
+xen_pass=yunshan3302
+xen_nic=eth0
+xen_mask=255.255.0.0
+xen_gate=
+xen_name=8.8.8.8
+
+[xenserver]    
+nfs_dir=/opt/xs620
+xen_path=xenserver
+xen_pass=yunshan3302
+xen_nic=eth0
+xen_mask=255.255.0.0
+xen_gate=
+xen_name=8.8.8.8
+
+[centos]    
+nfs_dir=/opt/centos65
+centos_path=centos65
+host_pass=security421
+host_nic=eth0
+host_mask=255.255.0.0
+host_gate=172.16.0.1
+host_ns=8.8.8.8
+
+[esxi55]    
+nfs_dir=/opt/esxi55
+centos_path=esxi55
+host_pass=yunshan3302
+host_nic=eth0
+host_mask=255.255.0.0
+host_gate=172.16.0.1
+host_ns=8.8.8.8
