fix centos bug#1

--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -1,9 +1,7 @@
 [global]    
 conf_folder=conf
-pxelinux=C:\\python-workshop\\pxeBuilder\\final
-#/opt/tftpboot/isolinux/pxelinux.cfg
-nfs_ans=C:\\python-workshop\\pxeBuilder\\final
-#/opt/kick
+pxelinux=/opt/tftpboot/isolinux/pxelinux.cfg
+nfs_ans=/opt/kick
 temp_folder=templates
 nfs_ip=172.16.0.1
 
