--- a/templates/centos_pxe.in
+++ b/templates/centos_pxe.in
@@ -6,4 +6,4 @@ timeout 5
 LABEL CentOS_KS_Install
     MENU LABEL KS_Install
     kernel ${centos_path}/vmlinuz
-    APPEND initrd=${centos_path}/initrd.img ramdisk_size=300000 ks=${nfs_ip}:${nfs_ans}/${answerfile} ksdevice=${host_nic} text
+    APPEND initrd=${centos_path}/initrd.img ramdisk_size=300000 ks=nfs:${nfs_ip}:${nfs_ans}/${answerfile} ksdevice=${host_nic} text
