fix centos esxi bug#2

--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -34,7 +34,7 @@ host_ns=8.8.8.8
 
 [esxi55]    
 nfs_dir=/opt/esxi55
-centos_path=esxi55
+esxi_path=esxi55
 host_pass=yunshan3302
 host_nic=eth0
 host_mask=255.255.0.0
