--- a/templates/centos.in
+++ b/templates/centos.in
@@ -9,14 +9,14 @@ firewall --service=ssh
 authconfig --enableshadow --passalgo=sha512
 selinux --permissive
 timezone --utc Asia/Shanghai
-bootloader --location=mbr --driveorder=sda,sdb --append="crashkernel=auto console=hvc0 rhgb quiet"
+bootloader --location=mbr --driveorder=sda,sdb --append="crashkernel=auto rhgb quiet"
 clearpart --all --initlabel
 
-part /boot --fstype=ext4 --size=200 --ondisk=sda
-part pv.202002 --grow --size=1 --ondisk=sda
+part /boot --fstype=ext4 --size=200
+part pv.202002 --grow --size=1
 volgroup VolGroup --pesize=4096 pv.202002
 logvol / --fstype=ext4 --name=lv_root --vgname=VolGroup --grow --size=1024 --maxsize=51200
-logvol swap --name=lv_swap --vgname=VolGroup --size=1000 --grow --maxsize=5952
+logvol swap --name=lv_swap --vgname=VolGroup --size=1000 --grow --maxsize=3968
 
 reboot
 
