--- a/templates/esxi55_pxe.in
+++ b/templates/esxi55_pxe.in
@@ -3,6 +3,6 @@ DEFAULT menu.c32
 NOHALT 1
 TIMEOUT 3
 LABEL ESXi 5.0 KickStart and HTTP
-KERNEL {esxi5_url_path}/mboot.c32
+KERNEL ${esxi_path}/mboot.c32
 APPEND -c ${nfs_ip}:${nfs_ans}/${bootcfg} ks=${nfs_ip}:${nfs_ans}/${ksfile} +++
 IPAPPEND 1
