--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -36,7 +36,7 @@ host_ns=8.8.8.8
 nfs_dir=/opt/esxi55
 esxi_path=esxi55
 host_pass=yunshan3302
-host_nic=eth0
+host_nic=vmnic0
 host_mask=255.255.0.0
 host_gate=172.16.0.1
 host_ns=8.8.8.8
