--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -1,22 +1,29 @@
 [global]    
 conf_folder=conf
-pxelinux=/opt/tftpboot/isolinux/pxelinux.cfg
-nfs_ans=/opt/kick
 temp_folder=templates
-nfs_ip=172.16.0.1
+http_server=http://172.16.0.1:8090
+kick_url=kick
+www_root=www_root
+tftp_root=tftpboot
 
-[xcp]    
-nfs_dir=/opt/xcp
-xen_path=xcp
+[dhcp]
+dnsmasq_path=/etc/dnsmasq.d/
+pxe_method=ipxe
+start_ip=172.16.0.200
+end_ip=172.16.0.230
+netmask=255.255.0.0
+gateway=172.16.0.1
+
+[xcp]
+url_path=xcp
 xen_pass=yunshan3302
 xen_nic=eth0
 xen_mask=255.255.0.0
 xen_gate=
 xen_name=8.8.8.8
 
-[xenserver]    
-nfs_dir=/opt/xs620
-xen_path=xenserver
+[xenserver]   
+url_path=xs620
 xen_pass=yunshan3302
 xen_nic=eth0
 xen_mask=255.255.0.0
@@ -24,17 +31,15 @@ xen_gate=
 xen_name=8.8.8.8
 
 [centos]    
-nfs_dir=/opt/centos65
-centos_path=centos65
+url_path=centos65
 host_pass=security421
 host_nic=eth0
 host_mask=255.255.0.0
 host_gate=172.16.0.1
 host_ns=8.8.8.8
 
-[esxi55]    
-nfs_dir=/opt/esxi55
-esxi_path=esxi55
+[esxi55]
+url_path=esxi55_dell
 host_pass=yunshan3302
 host_nic=vmnic0
 host_mask=255.255.0.0
