--- a/templates/centos_pxe.in
+++ b/templates/centos_pxe.in
@@ -2,8 +2,8 @@
 default CentOS_KS_Install
 prompt 1
 timeout 5
-#display boot.msg
+#display ${http_server}/${url_path}/isolinux/boot.msg
 LABEL CentOS_KS_Install
     MENU LABEL KS_Install
-    kernel ${centos_path}/vmlinuz
-    APPEND initrd=${centos_path}/initrd.img ramdisk_size=300000 ks=nfs:${nfs_ip}:${nfs_ans}/${answerfile} ksdevice=${host_nic} text
+    kernel ${http_server}/${url_path}/isolinux/vmlinuz
+    APPEND initrd=${http_server}/${url_path}/isolinux/initrd.img ramdisk_size=300000 ks=${http_server}/${kick_url}/${answerfile} ksdevice=${host_nic} text
