add lighttpd support

--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -8,6 +8,7 @@ tftp_root=tftpboot
 
 [dhcp]
 dnsmasq_path=/etc/dnsmasq.d/
+lighttpd_path=/etc/lighttpd/
 pxe_method=ipxe
 start_ip=172.16.0.200
 end_ip=172.16.0.230
