--- a/templates/centos.in
+++ b/templates/centos.in
@@ -15,7 +15,7 @@ clearpart --all --initlabel
 part /boot --fstype=ext4 --size=200
 part pv.202002 --grow --size=1
 volgroup VolGroup --pesize=4096 pv.202002
-logvol / --fstype=ext4 --name=lv_root --vgname=VolGroup --grow --size=1024 --maxsize=51200
+logvol / --fstype=ext4 --name=lv_root --vgname=VolGroup --grow --size=1024
 logvol swap --name=lv_swap --vgname=VolGroup --size=1000 --grow --maxsize=3968
 
 reboot
