add dell nic support

--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -34,7 +34,7 @@ xen_name=8.8.8.8
 [centos]    
 url_path=centos65
 host_pass=security421
-host_nic=eth0
+host_nic=em1
 host_mask=255.255.0.0
 host_gate=172.16.0.1
 host_ns=8.8.8.8
