--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -15,13 +15,21 @@ end_ip=172.16.0.230
 netmask=255.255.0.0
 gateway=172.16.0.1
 
-[xcp]
-url_path=xcp
-xen_pass=yunshan3302
-xen_nic=eth0
-xen_mask=255.255.0.0
-xen_gate=
-xen_name=8.8.8.8
+[centos7]    
+url_path=centos70
+host_pass=yunshan3302
+host_nic=em1
+host_mask=255.255.0.0
+host_gate=172.16.0.1
+host_ns=8.8.8.8
+
+[centos6]    
+url_path=centos65
+host_pass=yunshan3302
+host_nic=em1
+host_mask=255.255.0.0
+host_gate=172.16.0.1
+host_ns=8.8.8.8
 
 [xenserver]   
 url_path=xs620
@@ -31,13 +39,13 @@ xen_mask=255.255.0.0
 xen_gate=
 xen_name=8.8.8.8
 
-[centos]    
-url_path=centos65
-host_pass=security421
-host_nic=em1
-host_mask=255.255.0.0
-host_gate=172.16.0.1
-host_ns=8.8.8.8
+[xcp]
+url_path=xcp
+xen_pass=yunshan3302
+xen_nic=eth0
+xen_mask=255.255.0.0
+xen_gate=
+xen_name=8.8.8.8
 
 [esxi55]
 url_path=esxi55_dell
