[pxebuilder] modify structure
PR#=-1

Signed-off-by: Dong Dawei <dawei@yunshan.net.cn>

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,3 @@
 eclipse.preferences.version=1
-encoding/pxe.py=utf-8
-encoding/pxe_data.py=utf-8
-encoding/setup_pxe.py=utf-8
+encoding//lib/pxe_core.py=utf-8
+encoding/setup_pxe=utf-8
