--- a/templates/centos7.in
+++ b/templates/centos7.in
@@ -4,7 +4,7 @@ auth --enableshadow --passalgo=sha512
 # Install, not upgrade
 install
 # Install from a friendly mirror and add updates
-url --url=${http_server}/${url_path}
+url --url={{http_server}}/{{url_path}}
 # Run the Setup Agent on first boot
 firstboot --enable
 unsupported_hardware
@@ -12,18 +12,16 @@ unsupported_hardware
 lang en_US.UTF-8
 keyboard us
 # Network information
-network  --device ${host_nic} --onboot yes --bootproto static --ip ${host_ipaddr} --netmask ${host_mask} --gateway ${host_gate} --hostname ${hostname}
+network  --device {{host_nic}} --onboot yes --bootproto static --ip {{host_ipaddr}} --netmask {{host_mask}} --gateway {{host_gate}} --hostname {{hostname}}
 firewall --service=ssh
 selinux --permissive
 # Root password
-rootpw ${host_pass}
+rootpw {{host_pass}}
 # System timezone
 timezone --utc Asia/Shanghai
 # Reboot after installation
 reboot --eject 
-#autopart --type=lvm
-# Clear the Master Boot Record
-zerombr
+
 %include /tmp/part-include
 
 %packages
@@ -32,44 +30,14 @@ zerombr
 
 %pre
 #!/bin/sh
+echo "#partitioning scheme generated in %pre for /dev/sda" > /tmp/part-include
+echo "clearpart --all --initlabel" >> /tmp/part-include
+echo "bootloader --location=mbr" >> /tmp/part-include
+echo "part biosboot --fstype=biosboot --size=1 --asprimary --ondisk=sda" >> /tmp/part-include
+echo "part /boot --fstype xfs --size 500 --asprimary --ondrive=sda" >> /tmp/part-include
+echo "part pv.01 --size 1 --grow --ondrive=sda" >> /tmp/part-include
+echo "volgroup rootvg01 pv.01" >> /tmp/part-include
+echo "logvol swap --vgname=rootvg01 --fstype=swap --name=swap --recommended" >> /tmp/part-include
+echo "logvol / --vgname=rootvg01 --size=1 --name=root --grow" >> /tmp/part-include
 
-function set_disk()
-{
-    disk=$$1
-    ls /dev/ | grep -q "$$disk" > /dev/null 2>&1
-    if [ "$$?" -eq "0" ] ; then
-        for v_partition in $$(parted -s /dev/$$disk print|awk '/^ / {print $$1}')
-        do
-            /usr/sbin/parted -s /dev/$$disk rm $${v_partition}
-        done
-        /usr/sbin/parted -s /dev/$$disk mklabel gpt
-        echo "#partitioning scheme generated in %pre for /dev/$$disk" > /tmp/part-include
-        echo "clearpart --none" >> /tmp/part-include
-        echo "bootloader --location=mbr" >> /tmp/part-include
-        echo "part biosboot --fstype=biosboot --size=1 --asprimary --ondisk=$$disk" >> /tmp/part-include
-        echo "part /boot --fstype xfs --size 500 --asprimary --ondrive=$$disk" >> /tmp/part-include
-        echo "part / --fstype xfs --size 1 --grow --ondrive=$$disk" >> /tmp/part-include
-        echo "part pv.01 --size 1 --grow --ondrive=$$disk" >> /tmp/part-include
-        echo "volgroup rootvg01 pv.01" >> /tmp/part-include
-        echo "logvol swap --vgname=rootvg01 --fstype=swap --name=swap --recommended" >> /tmp/part-include
-        echo "logvol / --vgname=rootvg01 --size=1 --name=root --grow" >> /tmp/part-include
-    fi
-}
-
-set_disk sda
-set_disk hda
-set_disk xvda
-
-%end
-
-%post
-#!/bin/sh
-echo "# yum --disablerepo=\* --enablerepo=centos7 [command]" > /etc/yum.repos.d/custom.repo
-echo "" >> /etc/yum.repos.d/custom.repo
-echo "[centos7]" >> /etc/yum.repos.d/custom.repo
-echo "name=CentOS-7 - Media" >> /etc/yum.repos.d/custom.repo
-echo "baseurl=http://172.16.39.10/00_mirrors/centos7.0/" >> /etc/yum.repos.d/custom.repo
-echo "gpgcheck=0" >> /etc/yum.repos.d/custom.repo
-echo "enabled=1" >> /etc/yum.repos.d/custom.repo
-echo "gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7" >> /etc/yum.repos.d/custom.repo
 %end
