--- a/templates/xenserver.in
+++ b/templates/xenserver.in
@@ -2,14 +2,14 @@
 <installation>
     <primary-disk gueststorage="no">sda</primary-disk>
     <keymap>us</keymap>
-    <root-password>${xen_pass}</root-password>
-    <source type="url">${http_server}/${url_path}</source>
-    <admin-interface name="${xen_nic}" proto="static">
-        <ip>${xen_ipaddr}</ip>
-        <subnet-mask>${xen_mask}</subnet-mask>
-        <gateway>${xen_gate}</gateway>
+    <root-password>{{xen_pass}}</root-password>
+    <source type="url">{{http_server}}/{{url_path}}</source>
+    <admin-interface name="{{xen_nic}}" proto="static">
+        <ip>{{xen_ipaddr}}</ip>
+        <subnet-mask>{{xen_mask}}</subnet-mask>
+        <gateway>{{xen_gate}}</gateway>
     </admin-interface>
-    <nameserver>${xen_name}</nameserver>
+    <nameserver>{{xen_name}}</nameserver>
     <timezone>Asia/Shanghai</timezone>
-    <hostname>${xen_hostname}</hostname>
+    <hostname>{{xen_hostname}}</hostname>
 </installation>
