--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -15,25 +15,41 @@ end_ip=172.16.0.230
 netmask=255.255.0.0
 gateway=172.16.0.1
 
-[centos7]    
+[centos70]    
 url_path=centos70
 host_pass=yunshan3302
+kick_file=centos7.in
+pxe_file=centos7_pxe.in
 host_nic=em1
 host_mask=255.255.0.0
 host_gate=172.16.0.1
 host_ns=8.8.8.8
 
-[centos6]    
+[centos65]    
 url_path=centos65
 host_pass=yunshan3302
+kick_file=xenserver.in
+pxe_file=xen_pxe.in
 host_nic=em1
 host_mask=255.255.0.0
 host_gate=172.16.0.1
 host_ns=8.8.8.8
 
-[xenserver]   
+[xenserver62]   
 url_path=xs620
 xen_pass=yunshan3302
+kick_file=xenserver.in
+pxe_file=xen_pxe.in
+xen_nic=eth0
+xen_mask=255.255.0.0
+xen_gate=
+xen_name=8.8.8.8
+
+[xenserver65]   
+url_path=xs650
+xen_pass=yunshan3302
+kick_file=centos6.in
+pxe_file=centos6_pxe.in
 xen_nic=eth0
 xen_mask=255.255.0.0
 xen_gate=
@@ -42,6 +58,8 @@ xen_name=8.8.8.8
 [xcp]
 url_path=xcp
 xen_pass=yunshan3302
+kick_file=xcp.in
+pxe_file=xen_pxe.in
 xen_nic=eth0
 xen_mask=255.255.0.0
 xen_gate=
@@ -50,6 +68,9 @@ xen_name=8.8.8.8
 [esxi55]
 url_path=esxi55_dell
 host_pass=yunshan3302
+kick_file=esxi55.in
+cfg_file=esxi55_cfg.in
+pxe_file=esxi55_pxe.in
 host_nic=vmnic0
 host_mask=255.255.0.0
 host_gate=172.16.0.1
