--- a/templates/centos6_pxe.in
+++ b/templates/centos6_pxe.in
@@ -2,7 +2,7 @@
 default CentOS_KS_Install
 prompt 1
 timeout 5
-#display {{http_server}}}}/{{url_path}}/isolinux/boot.msg
+#display {{http_server}}/{{url_path}}/isolinux/boot.msg
 LABEL CentOS_KS_Install
     MENU LABEL KS_Install
     kernel {{http_server}}/{{url_path}}/isolinux/vmlinuz
