[PXE] add centos minimal support
PR#=-1

Signed-off-by: Dong Dawei <dawei@yunshan.net.cn>

--- a/conf/pxe.cfg
+++ b/conf/pxe.cfg
@@ -15,27 +15,47 @@ end_ip=172.16.0.230
 netmask=255.255.0.0
 gateway=172.16.0.1
 
-[centos70]    
-url_path=centos70
+[centos70m]    
+url_path=centos70m
 host_pass=yunshan3302
-kick_file=centos7.in
+kick_file=centos7m.in
 pxe_file=centos7_pxe.in
 host_nic=em1
 host_mask=255.255.0.0
 host_gate=172.16.0.1
 host_ns=8.8.8.8
 
-[centos65]    
-url_path=centos65
+[centos70b]    
+url_path=centos70b
 host_pass=yunshan3302
-kick_file=centos6.in
+kick_file=centos7b.in
+pxe_file=centos7_pxe.in
+host_nic=em1
+host_mask=255.255.0.0
+host_gate=172.16.0.1
+host_ns=8.8.8.8
+
+[centos65m]    
+url_path=centos65m
+host_pass=yunshan3302
+kick_file=centos6m.in
 pxe_file=centos6_pxe.in
 host_nic=em1
 host_mask=255.255.0.0
 host_gate=172.16.0.1
 host_ns=8.8.8.8
 
-[xenserver62]   
+[centos65b]    
+url_path=centos65b
+host_pass=yunshan3302
+kick_file=centos6b.in
+pxe_file=centos6_pxe.in
+host_nic=em1
+host_mask=255.255.0.0
+host_gate=172.16.0.1
+host_ns=8.8.8.8
+
+[xenserver620]   
 url_path=xs620
 xen_pass=yunshan3302
 kick_file=xenserver.in
@@ -45,7 +65,7 @@ xen_mask=255.255.0.0
 xen_gate=
 xen_name=8.8.8.8
 
-[xenserver65]   
+[xenserver650]   
 url_path=xs650
 xen_pass=yunshan3302
 kick_file=xenserver.in
@@ -55,7 +75,7 @@ xen_mask=255.255.0.0
 xen_gate=
 xen_name=8.8.8.8
 
-[xcp]
+[xcp000]
 url_path=xcp
 xen_pass=yunshan3302
 kick_file=xcp.in
@@ -65,7 +85,7 @@ xen_mask=255.255.0.0
 xen_gate=
 xen_name=8.8.8.8
 
-[esxi55]
+[esxi550]
 url_path=esxi55_dell
 host_pass=yunshan3302
 kick_file=esxi55.in
